pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: commonplacing
  labels:
          app: commonplacing
spec:
  containers:
  - name: commonplacing
    image: qlek/commonplacing:1.0
    ports:
        - containerPort: 8080
          protocol: TCP
