service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comservice
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector: 
    app: commonplacing
